k8s_manifests/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-py-internal
  namespace: vault-py
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: infra-internal
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/group.name: infra-internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /_info
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=true
    alb.ingress.kubernetes.io/security-groups: whitelist, Public_Access
spec:
  ingressClassName: "alb"
  rules:
    - host: "vaultpy.v16cp.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault-py
                port:
                  name: vault-py
